--- a/index.html
+++ b/index.html
@@ -48,20 +48,19 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-    <div id="home" >
-        <div class="overlay">
-            <!-- overylay class usage -->
-            <div class="container">
-                <div class="col-md-8 col-md-offset-2 text-center">
+	<div id="video-sec" height="600px" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aAKfdeOX3-o',containment:'self',autoPlay:true, mute:true, startAt:0, loop:true, opacity:1,mute: true,showControls:false}">
+		<div class="overlay">
+			<!-- overylay class usage -->
+			<div class="container">
+				<div class="col-md-8 col-md-offset-2 text-center">
 
-                    <h1>HoloTrip</h1>
-                    <h2>Explore. Work. Play. Together.</h2>
-                </div>
+					<h1>HoloTrip</h1>
+					<h2>Explore. Work. Play. Together.</h2>
+				</div>
 
-            </div>
-        </div>
-
-    </div>
+			</div>
+		</div>
+	</div>
     <!--HOME SECTION END  -->
     <section id="services">
         <div class="container">
