--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="HoloTrip website. Explore. Work. Play. Together." />
+    <meta name="author" content="Aaron Meaney and Wagner de Oliveira" />
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
@@ -39,23 +39,25 @@
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
                     <li><a href="#home">HOME</a></li>
-                    <li><a href="#services">SERVICES</a></li>
-                    <li><a href="#works">WORKS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="#services">EXPLORE</a></li>
+                    <li><a href="#works">WORK</a></li>
+                    <li><a href="#contact">PLAY</a></li>
+                    <li><a href="#contact">TOGETHER</a></li>
+                    <li><a href="#contact">ABOUT US</a></li>
                 </ul>
             </div>
 
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-	<div id="video-sec" height="600px" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aAKfdeOX3-o',containment:'self',autoPlay:true, mute:true, startAt:0, loop:true, opacity:1,mute: true,showControls:false}">
+	<div id="home-video-sec" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aAKfdeOX3-o',containment:'self',autoPlay:true, mute:true, startAt:0, loop:true, opacity:1,mute: true,showControls:false}">
 		<div class="overlay">
 			<!-- overylay class usage -->
 			<div class="container">
 				<div class="col-md-8 col-md-offset-2 text-center">
 
 					<h1>HoloTrip</h1>
-					<h2>Explore. Work. Play. Together.</h2>
+					<h2 class="scroll-me"><a href="#explore">Explore.</a> <a href="#works">Work.</a> <a href="#play">Play.</a> <a href="#together">Together.</a></h2>
 				</div>
 
 			</div>
@@ -251,7 +253,7 @@
         </section>
     <!-- CLIENTS SECTION END-->
     <footer>
-        © 2015 YourDomain.com  | <a href="http://www.designbootstrap.com/" target="_blank">by DesignBootstrap</a>
+        © 2015 HoloTrip  | Website by Aaron Meaney and Wagner de Oliveira | <a href="http://www.designbootstrap.com/" target="_blank">Theme by DesignBootstrap</a>
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
