--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/vivaldi-logo.png" alt="" class="img-responsive" />
+                    <img src="assets/img/logo.png" alt="" class="img-responsive" />
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-right scroll-me">
                 <ul class="nav navbar-nav ">
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#services">EXPLORE</a></li>
-                    <li><a href="#works">WORK</a></li>
-                    <li><a href="#contact">PLAY</a></li>
-                    <li><a href="#contact">TOGETHER</a></li>
-                    <li><a href="#contact">ABOUT US</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="explore.html">EXPLORE</a></li>
+                    <li><a href="work.html">WORK</a></li>
+                    <li><a href="play.html">PLAY</a></li>
+                    <li><a href="together.html">TOGETHER</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
                 </ul>
             </div>
 
@@ -234,19 +234,18 @@
     <!-- CONTACT SECTION END-->
     <section id="clients">
     <div class="container">
-        <div class="row">
+		<div class="row text-center ">
+			<h2 class="head-set">PARTNERS</h2>
+		</div>
+        <div class="row text-center">
+			<div class="col-md-3"></div>
             <div class="col-md-3">
-                <img src="assets/img/audio.png" alt="" class="img-responsive" />
+                <a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
             </div>
             <div class="col-md-3">
-                <img src="assets/img/codecanon.png" alt="" class="img-responsive" />
+                <a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
             </div>
-            <div class="col-md-3">
-                <img src="assets/img/graphic.png" alt="" class="img-responsive" />
-            </div>
-            <div class="col-md-3">
-                <img src="assets/img/themeforest.png" alt="" class="img-responsive" />
-            </div>
+			<div class="col-md-3"></div>
         </div>
 
     </div>
