--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="container">
 				<div class="col-md-8 col-md-offset-2 text-center">
 
-					<h1>HoloTrip</h1>
+					<h1 class="scroll-me"><a href="#holotrip">HoloTrip</a></h1>
 					<h2 class="scroll-me"><a href="#explore">Explore.</a> <a href="#works">Work.</a> <a href="#play">Play.</a> <a href="#together">Together.</a></h2>
 				</div>
 
@@ -64,14 +64,14 @@
 		</div>
 	</div>
     <!--HOME SECTION END  -->
-    <section id="services">
+    <section id="holotrip">
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR SERVICES</h2>
+                    <h2 class="head-set">WHAT IS HOLOTRIP?</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        HoloTrip is a revolutionary program that allows you to virtually
+							project yourself into another person's space, where you can Explore, Work and Play Together.
                     </p>
                 </div>
             </div>
@@ -79,76 +79,55 @@
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-recycle  fa-5x"></i>
-                    <h4 class="head-set">RESPONSIVE DESIGN</h4>
+                    <h4 class="head-set">IMMERSIVE </h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        With the power of HoloLens and Augmented Reality,
+						you'll believe that where HoloTrip takes you is
+						real. Prepare to be amazed.
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-desktop  fa-5x"></i>
-                    <h4 class="head-set">EASY TO CUSTOMIZE </h4>
+                    <h4 class="head-set">ACCESSIBLE </h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        Only with HoloTrip and HoloLens will you be able
+						to Explore, Work and Play Together with the power
+						to control your computer naturally.
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-bolt  fa-5x"></i>
-                    <h4 class="head-set">100% FREE TO USE</h4>
+                    <h4 class="head-set">REALISTIC </h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+						Physics calculations are exactly like real life, and
+						when you connect to the NVIDIA GRID&#8482; everything becomes
+						just that bit more amazing.
                     </p>
                 </div>
             </div>
         </div>
     </section>
-    <!--SERVICES SECTION END  -->
+    <!--ABOUT SECTION END  -->
     <div class="parallax-like">
         <div class="overlay">
-
-
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <div>
-                            <strong>1300+</strong>
-                            <p>
-                                Projects
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <div>
-                            <strong>100+</strong>
-                            <p>
-                                Locations
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 ">
-                        <div>
-                            <strong>5000+</strong>
-                            <p>
-                                Employees
-                            </p>
-                        </div>
-                    </div>
-
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
                 </div>
             </div>
         </div>
     </div>
     <!--PARALLAX LIKE / STATS SECTION END  -->
-    <section id="works">
+    <section id="explore">
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR WORKS</h2>
+                    <h2 class="head-set">EXPLORE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
+						and begin to explore the world as if you were really there!
                     </p>
                 </div>
             </div>
@@ -158,79 +137,249 @@
                     <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
-                        <h3>Project Title Here</h3>
-                        <h5><a href="#"><strong>Click Here</strong> </a>to go to the project</h5>
+                        <h3>Explore New Countries</h3>
+                        <h5>What is it life like in Bangkok? Find out!</h5>
                     </div>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-danger">
+                    <div class="alert alert-info">
                         <img src="assets/img/2.jpg" class="img-responsive " alt="" />
 
-                        <h3>Project Title Here</h3>
-                        <h5><a href="#"><strong>Click Here</strong> </a>to go to the project</h5>
+                        <h3>Explore New Cultures</h3>
+                        <h5>Meet new people and discover new customs!</h5>
                     </div>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-success">
+                    <div class="alert alert-info">
                         <img src="assets/img/3.jpg" class="img-responsive " alt="" />
 
-                        <h3>Project Title Here</h3>
-                        <h5><a href="#"><strong>Click Here</strong> </a>to go to the project</h5>
+						<h3>Explore New Languages</h3>
+                        <h5>Meet a native, make friends and learn a language!</h5>
                     </div>
 
                 </div>
 
+            </div>
+			<div class="row text-center portfolio-item">
+                <div class="col-md-12 col-sm-12 ">
+                    <a href="explore.html"><div class="alert alert-info">
+                        <h3>EXPLORE</h3>
+                        <h5>Click here for more information.</h5>
+                    </div></a>
+                </div>
             </div>
         </div>
     </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
-    <div id="video-sec" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Ycv5fNd4AeM',containment:'self',autoPlay:true, mute:true, startAt:0, opacity:1,mute: true,showControls:false}">
-        <!-- change https://www.youtube.com/watch?v=Ycv5fNd4AeM to your youtube url-->
+	 <div class="parallax-like">
         <div class="overlay">
             <div class="container">
-                <div class="row text-center">
-                    <div class="col-md-12">
-                        <h1>HERE IS BACKGROUND VEDIO</h1>
-                        <h4>This scripts uses plugin <strong>jquery.mb.YTPlayer</strong>
-
-                        </h4>
-                        <h4>to play video in background of divs
-
-                        </h4>
-                    </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
                 </div>
             </div>
         </div>
-
     </div>
-    <!-- VIDEO SECTION END-->
-    <section id="contact">
+    <!--PARALLAX LIKE / STATS SECTION END  -->
+    <section id="works">
         <div class="container">
-            <div class="row text-center ">
+            <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR LOCATION</h2>
+                    <h2 class="head-set">WORK</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
+						and begin to explore the world as if you were really there!
                     </p>
-                    <br />
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center portfolio-item">
 
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
-                <div class="col-md-12">
-                    <h3>102, Melborne City,</h3>
-                    <h3>United States - 600 - 009 -00.</h3>
-                    <h3><strong>Email :</strong> info@yourdomain.com</h3>
+                        <h3>Explore New Countries</h3>
+                        <h5>What is it life like in Bangkok? Find out!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+
+                        <h3>Explore New Cultures</h3>
+                        <h5>Meet new people and discover new customs!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+
+						<h3>Explore New Languages</h3>
+                        <h5>Meet a native, make friends and learn a language!</h5>
+                    </div>
 
                 </div>
 
+            </div>
+			<div class="row text-center portfolio-item">
+                <div class="col-md-12 col-sm-12 ">
+                    <a href="work.html"><div class="alert alert-info">
+                        <h3>WORK</h3>
+                        <h5>Click here for more information.</h5>
+                    </div></a>
+                </div>
             </div>
         </div>
     </section>
+    <!--WORKS / PORTFOLIO SECTION END  -->
+	<div class="parallax-like">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--PARALLAX LIKE / STATS SECTION END  -->
+	<section id="play">
+        <div class="container">
+            <div class="row text-center pad-bottom">
+                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+                    <h2 class="head-set">PLAY</h2>
+                    <p>
+						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
+						and begin to explore the world as if you were really there!
+                    </p>
+                </div>
+            </div>
+            <div class="row text-center portfolio-item">
+
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+
+                        <h3>Explore New Countries</h3>
+                        <h5>What is it life like in Bangkok? Find out!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+
+                        <h3>Explore New Cultures</h3>
+                        <h5>Meet new people and discover new customs!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+
+						<h3>Explore New Languages</h3>
+                        <h5>Meet a native, make friends and learn a language!</h5>
+                    </div>
+
+                </div>
+
+            </div>
+			<div class="row text-center portfolio-item">
+                <div class="col-md-12 col-sm-12 ">
+                    <a href="play.html"><div class="alert alert-info">
+                        <h3>PLAY</h3>
+                        <h5>Click here for more information.</h5>
+                    </div></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--WORKS / PORTFOLIO SECTION END  -->
+	<div class="parallax-like">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--PARALLAX LIKE / STATS SECTION END  -->
+	<section id="together">
+        <div class="container">
+            <div class="row text-center pad-bottom">
+                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+                    <h2 class="head-set">TOGETHER</h2>
+                    <p>
+						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
+						and begin to explore the world as if you were really there!
+                    </p>
+                </div>
+            </div>
+            <div class="row text-center portfolio-item">
+
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/1.jpg" class="img-responsive " alt="" />
+
+                        <h3>Explore New Countries</h3>
+                        <h5>What is it life like in Bangkok? Find out!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/2.jpg" class="img-responsive " alt="" />
+
+                        <h3>Explore New Cultures</h3>
+                        <h5>Meet new people and discover new customs!</h5>
+                    </div>
+
+                </div>
+                <div class="col-md-4 col-sm-4 ">
+                    <div class="alert alert-info">
+                        <img src="assets/img/3.jpg" class="img-responsive " alt="" />
+
+						<h3>Explore New Languages</h3>
+                        <h5>Meet a native, make friends and learn a language!</h5>
+                    </div>
+
+                </div>
+
+            </div>
+			<div class="row text-center portfolio-item">
+                <div class="col-md-12 col-sm-12 ">
+                    <a href="together.html"><div class="alert alert-info">
+                        <h3>TOGETHER</h3>
+                        <h5>Click here for more information.</h5>
+                    </div></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--WORKS / PORTFOLIO SECTION END  -->
+	<div class="parallax-like">
+        <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--PARALLAX LIKE / STATS SECTION END  -->
     <!-- CONTACT SECTION END-->
     <section id="clients">
     <div class="container">
