Finished main menu content

--- a/index.html
+++ b/index.html
@@ -134,41 +134,36 @@
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
                         <h3>Explore New Countries</h3>
                         <h5>What is it life like in Bangkok? Find out!</h5>
-                    </div>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/2.jpg" class="img-responsive " alt="" />
 
                         <h3>Explore New Cultures</h3>
                         <h5>Meet new people and discover new customs!</h5>
-                    </div>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/3.jpg" class="img-responsive " alt="" />
 
 						<h3>Explore New Languages</h3>
                         <h5>Meet a native, make friends and learn a language!</h5>
-                    </div>
 
                 </div>
 
             </div>
 			<div class="row text-center portfolio-item">
-                <div class="col-md-12 col-sm-12 ">
-                    <a href="explore.html"><div class="alert alert-info">
-                        <h3>EXPLORE</h3>
-                        <h5>Click here for more information.</h5>
+				<div class="col-md-4 col-sm-4"></div>
+                <div class="col-md-4 col-sm-4 button">
+                    <a href="explore.html"><div>
+                        <h3>VIEW SECTION</h3>
                     </div></a>
                 </div>
+				<div class="col-md-4 col-sm-4"></div>
             </div>
         </div>
     </section>
@@ -191,49 +186,44 @@
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
                     <h2 class="head-set">WORK</h2>
                     <p>
-						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
-						and begin to explore the world as if you were really there!
+						Work more effectively and work your way! Multitasking and
+						collaboration with partners overseas has never been easier!
                     </p>
                 </div>
             </div>
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Countries</h3>
-                        <h5>What is it life like in Bangkok? Find out!</h5>
-                    </div>
+                        <h3>Work Efficiently</h3>
+                        <h5>With the AR, use anything as a monitor!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/2.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Cultures</h3>
-                        <h5>Meet new people and discover new customs!</h5>
-                    </div>
+                        <h3>Work Naturally</h3>
+                        <h5>Use accurate motion controls to work naturally!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/3.jpg" class="img-responsive " alt="" />
 
-						<h3>Explore New Languages</h3>
-                        <h5>Meet a native, make friends and learn a language!</h5>
-                    </div>
+						<h3>Work Overseas</h3>
+                        <h5>Inspect your project in three dimensions, overseas!</h5>
 
                 </div>
 
             </div>
 			<div class="row text-center portfolio-item">
-                <div class="col-md-12 col-sm-12 ">
-                    <a href="work.html"><div class="alert alert-info">
-                        <h3>WORK</h3>
-                        <h5>Click here for more information.</h5>
+				<div class="col-md-4 col-sm-4"></div>
+                <div class="col-md-4 col-sm-4 button">
+                    <a href="work.html"><div>
+                        <h3>VIEW SECTION</h3>
                     </div></a>
                 </div>
+				<div class="col-md-4 col-sm-4"></div>
             </div>
         </div>
     </section>
@@ -256,49 +246,44 @@
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
                     <h2 class="head-set">PLAY</h2>
                     <p>
-						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
-						and begin to explore the world as if you were really there!
+						Play your old favourites and new innovative titles with the ultimate immersive experience.
+						You'll never be taken out of the game - you're the main character.
                     </p>
                 </div>
             </div>
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Countries</h3>
-                        <h5>What is it life like in Bangkok? Find out!</h5>
-                    </div>
+                        <h3>Play Sports</h3>
+                        <h5>Play sports games - without the equipment!</h5>
 
                 </div>
-                <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
+				<div class="col-md-4 col-sm-4 ">
                         <img src="assets/img/2.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Cultures</h3>
-                        <h5>Meet new people and discover new customs!</h5>
-                    </div>
+                        <h3>Play Soldiers</h3>
+                        <h5>Immersive adrenaline-pumping gaming is here!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/3.jpg" class="img-responsive " alt="" />
 
-						<h3>Explore New Languages</h3>
-                        <h5>Meet a native, make friends and learn a language!</h5>
-                    </div>
+						<h3>Play Anything</h3>
+                        <h5>New games are always being made for HoloTrip!</h5>
 
                 </div>
 
             </div>
 			<div class="row text-center portfolio-item">
-                <div class="col-md-12 col-sm-12 ">
-                    <a href="play.html"><div class="alert alert-info">
-                        <h3>PLAY</h3>
-                        <h5>Click here for more information.</h5>
+				<div class="col-md-4 col-sm-4"></div>
+                <div class="col-md-4 col-sm-4 button">
+                    <a href="play.html"><div>
+                        <h3>VIEW SECTION</h3>
                     </div></a>
                 </div>
+				<div class="col-md-4 col-sm-4"></div>
             </div>
         </div>
     </section>
@@ -321,66 +306,48 @@
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
                     <h2 class="head-set">TOGETHER</h2>
                     <p>
-						Discover the world with HoloTrip from the comfort of your own home. Connect to a friend
-						and begin to explore the world as if you were really there!
+						Explore. Work. Play. Together. All of the unique features of HoloTrip are 
+						built around interacting with those you value the most. Everything is better with friends. 
                     </p>
                 </div>
             </div>
             <div class="row text-center portfolio-item">
 
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Countries</h3>
-                        <h5>What is it life like in Bangkok? Find out!</h5>
-                    </div>
+                        <h3>Explore Together</h3>
+                        <h5>Take a tour of your friend's home-town, from your own!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/2.jpg" class="img-responsive " alt="" />
 
-                        <h3>Explore New Cultures</h3>
-                        <h5>Meet new people and discover new customs!</h5>
-                    </div>
+                        <h3>Work Together</h3>
+                        <h5>Collaborate with your partners on another continent!</h5>
 
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div class="alert alert-info">
                         <img src="assets/img/3.jpg" class="img-responsive " alt="" />
 
-						<h3>Explore New Languages</h3>
-                        <h5>Meet a native, make friends and learn a language!</h5>
-                    </div>
+						<h3>Play Together</h3>
+                        <h5>Amazing augmented reality games - with multi-player!</h5>
 
                 </div>
 
             </div>
 			<div class="row text-center portfolio-item">
-                <div class="col-md-12 col-sm-12 ">
-                    <a href="together.html"><div class="alert alert-info">
-                        <h3>TOGETHER</h3>
-                        <h5>Click here for more information.</h5>
+				<div class="col-md-4 col-sm-4"></div>
+                <div class="col-md-4 col-sm-4 button">
+                    <a href="together.html"><div>
+                        <h3>VIEW SECTION</h3>
                     </div></a>
                 </div>
+				<div class="col-md-4 col-sm-4"></div>
             </div>
         </div>
     </section>
     <!--WORKS / PORTFOLIO SECTION END  -->
-	<div class="parallax-like">
-        <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-4"></div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 "></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--PARALLAX LIKE / STATS SECTION END  -->
-    <!-- CONTACT SECTION END-->
     <section id="clients">
     <div class="container">
 		<div class="row text-center ">
