Added HTML5 Placeholder Animation

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
                     </p>
                 </div>
             </div>
+			<div class="text-center">
+				<div class="col-md-12 col-sm-12 col-xs-12 pad-bottom">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="http://clips.animatron.com/2fa3454d8fae29c4a778fbe6675c6285" ></iframe>
+					</div>
+                </div>
+            </div>
             <div class="row text-center">
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
