Fixed animation black line

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </div>
 			<div class="text-center">
 				<div class="col-md-12 col-sm-12 col-xs-12 pad-bottom">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="http://clips.animatron.com/2fa3454d8fae29c4a778fbe6675c6285" ></iframe>
+					<div class="embed-responsive embed-responsive-16by9" align="left">
+						<iframe id="animation" class="embed-responsive-item" frameborder="false"; src="http://clips.animatron.com/5092ad33d9e3dc70b3344d8bf11ebd0d?a=true&r=false&c=false"></iframe>
 					</div>
                 </div>
             </div>
