Finished play section

--- a/play.html
+++ b/play.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-	<div id="home">
+	<div id="home-play">
 		<div class="overlay">
 			<!-- overylay class usage -->
 			<div class="container">
@@ -64,26 +64,90 @@
 		</div>
 	</div>
     <!--HOME SECTION END  -->
-	<!--INSERT CONTENT HERE -->
-    <!-- CONTACT SECTION END-->
-    <section id="clients">
-    <div class="container">
-		<div class="row text-center ">
-			<h2 class="head-set">PARTNERS</h2>
-		</div>
-        <div class="row text-center">
-			<div class="col-md-3"></div>
-            <div class="col-md-3">
-                <a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
-            </div>
-            <div class="col-md-3">
-                <a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
-            </div>
-			<div class="col-md-3"></div>
-        </div>
+	<section>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">FULLY IMMERSIVE GAMING</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 text-left">
+					<p>When we play games, we're used to using a controller, sitting on the couch and staring at the television. Games are fun, but we always want to be pulled into the game - to be immersed in it!
+					Motion controls were a start, but the television was still a factor. Now, with HoloTrip and HoloLens, the era of fully immersive gaming has begun!</p>
+					<p>When you start a game in HoloTrip, you're being transported to a different world. Want to fight against an alien invasion in your home city? HoloTrip can do it. Maybe you just want to play a
+					game of football with your friends, but you don't have a goal post (or even a football). HoloTrip will generate and simulate the game, so it's like you're really playing!</p>
+					<p>You can move around in full 3D! No more limitations or "play zones" where you can barely even walk around without ending the game. Play the game naturally, with full body motion tracking
+					and movement detection. You can go anywhere you want, and the game will never end. This is the era of fully immersive gaming.</p>
+				</div>
+				<div class="col-md-6 col-sd-12">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+			</div>
 
-    </div>
-        </section>
+		</div>
+    </section>
+	<!--FULLY IMMERSIVE END-->
+	<section style="background-color:#f4f4f4;">
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">GROUNDBREAKING MULTIPLAYER</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+				<div class="col-md-6 col-sd-12 text-left">
+					<p>Gaming is more fun with friends. The competition to be the winner. The struggle to win the match with your mates. These are the moments that define gaming, the moments with friends.
+					When you're the one who scored that last goal or the one who saved the world from the Martian invaders, you have all the glory. You won against the competition.</p>
+					<p>When you start playing in a virtual world projected on top of the real world, you will be amazed at the experience of augmented gaming. When your friend connects to the game, the
+					experience only gets better! Being able to share these amazing experiences with your friends is what makes gaming the adrenaline-pumping past-time it is today.</p>
+					<p>It gets even better. When you connect to another person's game in a completely different part of the world, you'll question why you didn't game with HoloTrip sooner. New games
+					are always being released on HoloTrip with new incredible experiences. This is the pinnacle of gaming - it doesn't get any better than this!</p>
+				</div>
+			</div>
+		</div>
+    </section>
+	<!--ONLINE PLAY END-->
+	<section>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">TRULY REALISTIC PHYSICS</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 text-left">
+					<p>When you play a game of football, you know how the ball reacts. When you kick the ball, you expect it to be affected not only by the force of the kick, but also the wind resistance,
+					the spin on the ball, the wind itself, thermal dynamics and many more factors that affect the ball. Only with HoloTrip will you be able to experience truly realistic physics.</p>
+					<p>Footballs aren't the only things that are simulated by HoloTrip. You and a friend can get into a dogfight in fighter jets, and experience true VR gaming with a completely
+					realistic air dynamics model. In a gunfight? The bullets are under the correct forces with a complete ballistics model. It's more real than real itself.</p>
+					<p>When things get hectic and the HoloTrip CPU is under load, we have a backup plan. PhysX and GRID by NVidia will take over most of the physics calculations from the CPU with
+					the power of cloud processing. Physics calculations become more realistic and more responsive. With 120 frames per second - gaming will never be the same!</p>
+				</div>
+				<div class="col-md-6 col-sd-12">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+			</div>
+
+		</div>
+    </section>
+    </section>
+	<!--NVidia GRID SECTION END-->
+    <section id="clients">
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">PARTNERS</h2>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-3"></div>
+				<div class="col-md-3">
+					<a href="http://www.microsoft.com/microsoft-hololens/en-us"><img src="assets/img/microsoft.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-3">
+					<a href="http://shield.nvidia.com/grid-game-streaming"><img src="assets/img/nvidia.png" alt="" class="img-responsive" /></a>
+				</div>
+				<div class="col-md-3"></div>
+			</div>
+
+		</div>
+    </section>
     <!-- CLIENTS SECTION END-->
     <footer>
         © 2015 HoloTrip  | Website by Aaron Meaney and Wagner de Oliveira | <a href="http://www.designbootstrap.com/" target="_blank">Theme by DesignBootstrap</a>
