Fixed Play div swap

--- a/play.html
+++ b/play.html
@@ -92,10 +92,10 @@
 				<h2 class="head-set">GROUNDBREAKING MULTIPLAYER</h2>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sd-12">
+				<div class="col-md-6 col-sd-12 topdiv">
 					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
 				</div>
-				<div class="col-md-6 col-sd-12 text-left">
+				<div class="col-md-6 col-sd-12 text-left bottomdiv">
 					<p>Gaming is more fun with friends. The competition to be the winner. The struggle to win the match with your mates. These are the moments that define gaming, the moments with friends.
 					When you're the one who scored that last goal or the one who saved the world from the Martian invaders, you have all the glory. You won against the competition.</p>
 					<p>When you start playing in a virtual world projected on top of the real world, you will be amazed at the experience of augmented gaming. When your friend connects to the game, the
