Set up templates

--- a/explore.html
+++ b/explore.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-	<div id="home">
+	<div id="home-explore">
 		<div class="overlay">
 			<!-- overylay class usage -->
 			<div class="container">
@@ -64,7 +64,63 @@
 		</div>
 	</div>
     <!--HOME SECTION END  -->
-	<!--INSERT CONTENT HERE -->
+	<section>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">TITLE ONE</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 text-left">
+					<p>PARAGRAPH ONE</p>
+					<p>PARAGRAPH TWO</p>
+					<p>PARAGRAPH THREE</p>
+				</div>
+				<div class="col-md-6 col-sd-12">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+			</div>
+
+		</div>
+    </section>
+	<!--SECTION 1 END-->
+	<section style="background-color:#f4f4f4;">
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">TITLE TWO</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 topdiv">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+				<div class="col-md-6 col-sd-12 text-left bottomdiv">
+					<p>PARAGRAPH ONE</p>
+					<p>PARAGRAPH TWO</p>
+					<p>PARAGRAPH THREE</p>
+				</div>
+			</div>
+
+		</div>
+    </section>
+	<!--SECTION 2 END-->
+	<section>
+		<div class="container">
+			<div class="row text-center ">
+				<h2 class="head-set">TITLE THREE</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sd-12 text-left">
+					<p>PARAGRAPH ONE</p>
+					<p>PARAGRAPH TWO</p>
+					<p>PARAGRAPH THREE</p>
+				</div>
+				<div class="col-md-6 col-sd-12">
+					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				</div>
+			</div>
+
+		</div>
+    </section>
+	<!--SECTION 3 END-->
     <!-- CONTACT SECTION END-->
     <section id="clients">
     <div class="container">
