Finished Explore page

--- a/explore.html
+++ b/explore.html
@@ -67,16 +67,19 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE ONE</h2>
+				<h2 class="head-set">EXPLORE NEW COUNTRIES</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>We live for excitement, for discovery. We all want to see the world but there's not enough time in the world to see it all. Here at HoloTrip, we strive to make the impossible possible.
+					Connect to a friend's HoloTrip and see their world come to life. What they can see, you can see - in full colour and 3D. Live in your world, walk in theirs.</p>
+					<p>When you visit a friend with HoloTrip, you'll be able to interact with them and be able to walk around their environment. Want to know what it's like in Brazil? You can with HoloTrip.
+					It's not just friends you can connect to either, even hikers and hill-walkers can use HoloTrip to show you what the wild side of the world is like.</p>
+					<p>You don't just have to connect to HoloLens sets either. HoloHubs are being set up all over the world! HoloHubs are like chat-rooms located at famous landmarks around the world!
+					Explore the world and make friends at the same time. You can even play games at HoloHubs and recruit people for projects!</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/mountainView.jpg"></img>
 				</div>
 			</div>
 
@@ -86,16 +89,19 @@
 	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE TWO</h2>
+				<h2 class="head-set">EXPLORE NEW CULTURES</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/mountainView.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>Exploring the world for its amazing scenery is one thing, but perhaps you're more interested in the cultures and people of different countries? On the internet, you can
+					read about these different cultures and these interesting people. With HoloTrip, you can experience different cultures and meet these amazing people.</p>
+					<p>People wishing to experience looking at the city of New York from the Empire State Building or touring the Vatican in Rome can do so without even leaving the house.
+					You can discover a world beyond your own and learn about different cultures and customs with the power of HoloTrip and HoloLens.</p>
+					<p>Another amazing feature of HoloTrip is HoloTour. You can connect to a registered HoloTourguide and get a guided HoloTour around whatever city or landmark you want.
+					Always wanted to know more about the history of the "Dome of the Rock"? Book a guided tour and learn, explore and have fun with HoloTours.</p>
 				</div>
 			</div>
 
@@ -105,16 +111,19 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE THREE</h2>
+				<h2 class="head-set">EXPLORE NEW LANGUAGES</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>With HoloTrip, everything can become just that bit easier. For example, learning a language. You can connect to a teacher online and learn a new language, face-to-face.
+					This isn't like a video call, this is true human interaction. It's easier to express yourself, and it's easier to learn new languages with HoloTrip.</p>
+					<p>You don't just have to learn a language with a teacher, you can connect to a HoloHub in a different language and practice your skills there instead! There is no better
+					way to learn a language than to practice speaking it. And there's nobody better to practice with than the natives themselves.</p>
+					<p>If standard languages like French and Spanish aren't what you're interested in, then you can learn a more exotic language such as Faroese or Basque. HoloTrip is
+					an invaluable way to learn more about the world and its inhabitants. Truly there's no better way to learn than to learn with HoloTrip.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/mountainView.jpg"></img>
 				</div>
 			</div>
 
