Finished About Us Page

--- a/about.html
+++ b/about.html
@@ -64,64 +64,40 @@
 		</div>
 	</div>
     <!--HOME SECTION END  -->
-	<section>
+	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE ONE</h2>
+				<h2 class="head-set">WAGNER DE OLIVEIRA</h2>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+				<div class="col-md-6 col-sd-12 text-left topdiv">
+					<p style="font-size:25px; margin-top:80px;">"My name is Wagner and I am from Brazil, half Italian. I am in my first year in Computer Science in the National College of Ireland, I used to work as a gym instructor and I have decided on a 360 spin of my life and change my career and goals in an IT environment. I intend to work for Google...  and I almost forget - I love video games!"</p>
 				</div>
-				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				<div class="col-md-6 col-sd-12 bottomdiv">
+					<img class="img-responsive" src="assets/img/wagner.jpg"></img>
 				</div>
 			</div>
 
 		</div>
     </section>
 	<!--SECTION 1 END-->
-	<section style="background-color:#f4f4f4;">
+	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE TWO</h2>
+				<h2 class="head-set">AARON MEANEY</h2>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+				<div class="col-md-6 col-sd-12 text-left topdiv">
+					<p style="font-size:25px; margin-top:80px;">"Hi, my name is Aaron and I'm an undergraduate Computing student at NCI. I live in Swords and I love working with computers! Every aspect of them interests me. Working on the HoloTrip project and website was an interesting challenge because of the sheer complexity of the project."</p>
 				</div>
-				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+				<div class="col-md-6 col-sd-12 bottomdiv">
+					<img class="img-responsive" src="assets/img/aaron.jpg"></img>
 				</div>
 			</div>
 
 		</div>
     </section>
 	<!--SECTION 2 END-->
-	<section>
-		<div class="container">
-			<div class="row text-center ">
-				<h2 class="head-set">TITLE THREE</h2>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
-				</div>
-				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
-				</div>
-			</div>
-
-		</div>
-    </section>
-	<!--SECTION 3 END-->
-    <!-- CONTACT SECTION END-->
     <section id="clients">
     <div class="container">
 		<div class="row text-center ">
