--- a/explore.html
+++ b/explore.html
@@ -93,7 +93,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/mountainView.jpg"></img>
+					<img class="img-responsive" src="assets/img/italia1.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
 					<p>Exploring the world for its amazing scenery is one thing, but perhaps you're more interested in the cultures and people of different countries? On the internet, you can
@@ -123,7 +123,7 @@
 					an invaluable way to learn more about the world and its inhabitants. Truly there's no better way to learn than to learn with HoloTrip.</p>
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/mountainView.jpg"></img>
+					<img class="img-responsive" src="assets/img/italia2.jpg"></img>
 				</div>
 			</div>
 
