--- a/work.html
+++ b/work.html
@@ -67,16 +67,16 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE ONE</h2>
+				<h2 class="head-set"></h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum hendrerit vel ligula ornare mollis. Nam commodo vestibulum ullamcorper. Sed lacinia venenatis quam tempus sodales. Vivamus et neque sed nisi sollicitudin posuere at nec odio. Nam gravida nisi a velit sollicitudin pellentesque. Cras id molestie tortor, eu scelerisque ante. Morbi nec ante maximus, pharetra leo in, eleifend nisi. Aliquam vehicula eros eu ligula viverra, quis malesuada purus ullamcorper. In quis luctus ligula. Fusce sapien orci, dictum quis volutpat et, ultricies sit amet eros. Nam eu dolor tempor, pretium metus sit amet, porttitor tellus.</p>
+					<p>Duis iaculis vulputate tempus. Vestibulum at libero fermentum dui malesuada blandit. Proin eu erat quis mauris lacinia semper. Nullam tempus sagittis elit, pellentesque pulvinar quam. Vestibulum ante felis, efficitur nec malesuada non, varius vitae elit. Ut venenatis facilisis rutrum. Nulla pretium varius rutrum. Fusce convallis, diam eu tempor convallis, augue nunc maximus odio, et iaculis orci ipsum et quam. Phasellus fermentum, lacus ut elementum pellentesque, dolor libero placerat arcu, a tempor est odio at quam. Vestibulum elementum rhoncus urna, in consequat nulla laoreet et. Nam augue enim, mollis et mi nec, ullamcorper fermentum ante. Nulla vitae tellus sit amet lectus euismod ornare</p>
+					
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/holo4.jpg"></img>
 				</div>
 			</div>
 
@@ -86,16 +86,16 @@
 	<section style="background-color:#f4f4f4;">
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE TWO</h2>
+				<h2 class="head-set">Where does it come from?</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 topdiv">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/holo1.jpg"></img>
 				</div>
 				<div class="col-md-6 col-sd-12 text-left bottomdiv">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur sed velit neque. Cras sagittis consequat orci ac rutrum. Fusce pellentesque, sapien in malesuada gravida, mauris sapien tristique mi, sit amet congue sapien risus vitae mauris. Cras nec cursus ipsum. Aliquam viverra vulputate libero, eget pellentesque mauris tincidunt ut. Nam vestibulum justo eu ultricies sagittis. Nunc vel justo odio. Integer non erat libero. Integer facilisis viverra metus, at hendrerit urna congue non. Maecenas sed varius massa. Aenean a turpis eu ex accumsan consequat. Aenean sed massa metus. Sed semper efficitur lorem, vel ullamcorper mi tincidunt at. Maecenas nec feugiat lectus</p>
+					<p>Etiam tempor non nunc in fermentum. Duis ex leo, tristique id arcu at, feugiat gravida elit. Phasellus lobortis velit ex. Aliquam erat volutpat. Mauris fermentum finibus urna et tincidunt. Morbi porttitor sapien eu consequat facilisis. Ut placerat dignissim posuere. Maecenas fermentum est et mauris lacinia pulvinar. Morbi tincidunt nibh id porttitor aliquam. Pellentesque vel diam vitae augue accumsan iaculis non congue mi. Proin mollis diam vitae orci consequat, ut faucibus dui congue. Praesent ut dolor lacinia, rutrum ex ac, volutpat nibh. Vivamus maximus pharetra sem, quis hendrerit nulla pharetra sit amet. Aliquam eu nisi ultrices, placerat diam ac, congue enim. Suspendisse aliquam sodales nibh, sed egestas nunc euismod in. Nullam in condimentum nibh, vel vestibulum lacus.</p>
+		
 				</div>
 			</div>
 
@@ -105,16 +105,16 @@
 	<section>
 		<div class="container">
 			<div class="row text-center ">
-				<h2 class="head-set">TITLE THREE</h2>
+				<h2 class="head-set">How easy does it work?</h2>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sd-12 text-left">
-					<p>PARAGRAPH ONE</p>
-					<p>PARAGRAPH TWO</p>
-					<p>PARAGRAPH THREE</p>
+					<p>Quisque maximus consequat turpis, vel eleifend nibh placerat in. Etiam vel rhoncus turpis. Nullam bibendum gravida augue vitae efficitur. Nullam laoreet metus dolor, in bibendum tortor maximus eget. Quisque quis condimentum quam, vitae feugiat ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi ex velit, mollis sit amet turpis a, vulputate imperdiet purus. Nunc ut mattis leo. Nam vestibulum elit id justo sollicitudin, ut facilisis tellus dictum. Nunc molestie nulla sit amet dictum condimentum. Mauris pharetra, arcu et rutrum hendrerit, sem lectus ultrices eros, ut tristique dui ligula a arcu. Vivamus sed sapien ac leo scelerisque luctus.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at enim tellus. Etiam vehicula vitae orci vitae tempor. Suspendisse potenti. Integer ac nibh pharetra, euismod lacus quis, cursus ante. Vestibulum lobortis libero dui. Donec suscipit est in justo tempor semper. Proin sed arcu quis urna interdum auctor. Praesent tincidunt leo nec molestie scelerisque. Integer tellus lorem, ultrices eget vulputate vitae, finibus ac tortor. Donec id tempor lectus, nec rhoncus urna. Aliquam sed lacus porttitor, efficitur sapien nec, sagittis erat. In aliquam augue porttitor quam luctus sagittis. In hac habitasse platea dictumst. Ut id vestibulum neque. Nulla condimentum metus sit amet nibh facilisis, sed dapibus velit euismod.</p>
+					
 				</div>
 				<div class="col-md-6 col-sd-12">
-					<img class="img-responsive" src="assets/img/vrgame.jpg"></img>
+					<img class="img-responsive" src="assets/img/holo2.jpg"></img>
 				</div>
 			</div>
 
